@@ -1,3 +1,8 @@
+2008-02-15  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR fortran/35150
+	* gfortran.dg/c_loc_tests_12.f03: New test.
+
 2008-02-15  Douglas Gregor  <doug.gregor@gmail.com>
 
 	PR c++/35023
